@@ -1,3 +1,9 @@
+2004-08-19  Werner Koch  <wk@g10code.de>
+
+	* pubkey.c (sexp_data_to_mpi): Changed the zero random byte
+	substituting code to actually do clever things.  Thanks to
+	Matthias Urlichs for noting the implementation problem.
+
 2004-08-09  Moritz Schulte  <moritz@g10code.com>
 
 	* pubkey.c (gcry_pk_sign): Fixed memory leak; fix provided by
